<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".Nivel1">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:hint="@string/txt_score"
        android:textColorHint="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_nivel"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#F2B059"
        android:hint="@string/bt_atras"
        android:onClick="Anterior"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#6CBEBF"
        android:hint="@string/bt_siguiente_nivel"
        android:onClick="Siguiente"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewScoreN1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:hint="@string/txt_vacio"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNivelN1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_vacio"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/imageButtonN3"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="30dp"
        android:onClick="ClickImg3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonN"
        app:srcCompat="@mipmap/imagen0" />

    <ImageButton
        android:id="@+id/imageButtonN"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="155dp"
        android:onClick="ClickImg1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/imagen0" />

    <ImageButton
        android:id="@+id/imageButtonN2"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="48dp"
        android:onClick="ClickImg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/imagen0" />

    <ImageButton
        android:id="@+id/imageButtonN4"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="48dp"
        android:onClick="ClickImg4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonN2"
        app:srcCompat="@mipmap/imagen0" />

</androidx.constraintlayout.widget.ConstraintLayout>